descriptive data analysis completed

--- a/airbnb_predict_first_booking.ipynb
+++ b/airbnb_predict_first_booking.ipynb
@@ -546,14 +546,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.749426Z",
-     "start_time": "2020-12-02T14:38:36.449Z"
+     "end_time": "2020-12-02T14:40:28.083444Z",
+     "start_time": "2020-12-02T14:40:27.950431Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                              0\n",
+       "date_account_created            0\n",
+       "timestamp_first_active          0\n",
+       "date_first_booking         124543\n",
+       "gender                          0\n",
+       "age                         87990\n",
+       "signup_method                   0\n",
+       "signup_flow                     0\n",
+       "language                        0\n",
+       "affiliate_channel               0\n",
+       "affiliate_provider              0\n",
+       "first_affiliate_tracked      6065\n",
+       "signup_app                      0\n",
+       "first_device_type               0\n",
+       "first_browser                   0\n",
+       "country_destination             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.isna().sum()"
    ]
@@ -567,14 +594,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.752379Z",
-     "start_time": "2020-12-02T14:38:36.451Z"
+     "end_time": "2020-12-02T14:40:31.276924Z",
+     "start_time": "2020-12-02T14:40:31.125691Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows (after dropping N/A's values): 68171\n"
+     ]
+    }
+   ],
    "source": [
     "# drop N/A's\n",
     "df1 = df1.dropna()\n",
@@ -583,22 +618,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1.4. Change Data Type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.760268Z",
-     "start_time": "2020-12-02T14:38:36.454Z"
-    },
-    "hidden": true
+     "end_time": "2020-12-02T14:40:34.619003Z",
+     "start_time": "2020-12-02T14:40:34.203438Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -617,15 +649,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.765840Z",
-     "start_time": "2020-12-02T14:38:36.455Z"
-    },
-    "hidden": true
+     "end_time": "2020-12-02T14:40:34.867364Z",
+     "start_time": "2020-12-02T14:40:34.858006Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                 object\n",
+       "date_account_created       datetime64[ns]\n",
+       "timestamp_first_active     datetime64[ns]\n",
+       "date_first_booking         datetime64[ns]\n",
+       "gender                             object\n",
+       "age                                 int64\n",
+       "signup_method                      object\n",
+       "signup_flow                         int64\n",
+       "language                           object\n",
+       "affiliate_channel                  object\n",
+       "affiliate_provider                 object\n",
+       "first_affiliate_tracked            object\n",
+       "signup_app                         object\n",
+       "first_device_type                  object\n",
+       "first_browser                      object\n",
+       "country_destination                object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.dtypes"
    ]
@@ -639,42 +697,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.772879Z",
-     "start_time": "2020-12-02T14:38:36.458Z"
+     "end_time": "2020-12-02T14:40:36.888336Z",
+     "start_time": "2020-12-02T14:40:36.881127Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'date_account_created', 'timestamp_first_active',\n",
+       "       'date_first_booking', 'gender', 'age', 'signup_method', 'signup_flow',\n",
+       "       'language', 'affiliate_channel', 'affiliate_provider',\n",
+       "       'first_affiliate_tracked', 'signup_app', 'first_device_type',\n",
+       "       'first_browser', 'country_destination'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.783165Z",
-     "start_time": "2020-12-02T14:38:36.460Z"
+     "end_time": "2020-12-02T14:40:37.999259Z",
+     "start_time": "2020-12-02T14:40:37.981447Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FEMALE       29863\n",
+       "MALE         26168\n",
+       "-unknown-    11979\n",
+       "OTHER          161\n",
+       "Name: gender, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1['gender'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-02T14:38:36.791432Z",
-     "start_time": "2020-12-02T14:38:36.462Z"
+     "end_time": "2020-12-02T14:40:39.616699Z",
+     "start_time": "2020-12-02T14:40:39.587516Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "US       70.89\n",
+       "other    11.09\n",
+       "FR        5.41\n",
+       "IT        2.98\n",
+       "GB        2.59\n",
+       "ES        2.49\n",
+       "CA        1.57\n",
+       "DE        1.25\n",
+       "NL        0.88\n",
+       "AU        0.64\n",
+       "PT        0.23\n",
+       "Name: country_destination, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# value_counts in percentage for each country\n",
     "df1['country_destination'].value_counts( normalize=True ).round(4) * 100"
