defined embalanced metrics

--- a/airbnb_predict_first_booking.ipynb
+++ b/airbnb_predict_first_booking.ipynb
@@ -107,18 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T18:11:00.367017Z",
-     "start_time": "2020-12-09T18:10:57.778694Z"
+     "end_time": "2020-12-11T15:33:10.853847Z",
+     "start_time": "2020-12-11T15:33:10.844996Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas                as pd\n",
     "import numpy                 as np\n",
-    "\n",
+    "import warnings\n",
     "import matplotlib.pyplot     as plt\n",
     "import seaborn               as sns\n",
     "\n",
@@ -127,12 +127,15 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing   import OneHotEncoder\n",
-    "from sklearn.metrics         import accuracy_score\n",
+    "from sklearn.metrics         import accuracy_score, balanced_accuracy_score\n",
+    "from sklearn.metrics         import cohen_kappa_score, classification_report\n",
     "\n",
     "from scikitplot.metrics      import plot_confusion_matrix\n",
     "\n",
     "from keras import models     as ml\n",
-    "from keras import layers     as l"
+    "from keras import layers     as l\n",
+    "\n",
+    "warnings.filterwarnings( 'ignore' )"
    ]
   },
   {
@@ -1248,11 +1251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T18:01:32.147302Z",
-     "start_time": "2020-12-09T18:01:32.116118Z"
+     "end_time": "2020-12-11T15:25:55.252905Z",
+     "start_time": "2020-12-11T15:25:55.089299Z"
     }
    },
    "outputs": [
@@ -1260,22 +1263,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 70.12%\n"
+      "Accuracy: 0.70%\n",
+      "Balanced Accuracy: 0.09%\n",
+      "Kappa Score: 0.004%\n"
      ]
     }
    ],
    "source": [
+    "# Accuracy\n",
     "accuracy_nn = accuracy_score( y_test_nn, yhat_nn )\n",
-    "print(f'Accuracy: {accuracy_nn * 100:.2f}%')"
+    "print(f'Accuracy: {accuracy_nn:.2f}%')\n",
+    "\n",
+    "# Balanced Accuracy\n",
+    "balanced_accuracy_nn = balanced_accuracy_score( y_test_nn, yhat_nn )\n",
+    "print(f'Balanced Accuracy: {balanced_accuracy_nn:.2f}%')\n",
+    "\n",
+    "# Kappa Score\n",
+    "kappa_nn = cohen_kappa_score( y_test_nn, yhat_nn )\n",
+    "print(f'Kappa Score: {kappa_nn:.3f}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-09T18:12:48.509158Z",
-     "start_time": "2020-12-09T18:12:47.105140Z"
+     "end_time": "2020-12-11T15:33:16.687236Z",
+     "start_time": "2020-12-11T15:33:16.146967Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          AU       0.00      0.00      0.00       101\n",
+      "          CA       0.00      0.00      0.00       214\n",
+      "          DE       0.22      0.01      0.02       170\n",
+      "          ES       0.00      0.00      0.00       345\n",
+      "          FR       0.15      0.01      0.01       710\n",
+      "          GB       0.00      0.00      0.00       344\n",
+      "          IT       0.00      0.00      0.00       423\n",
+      "          NL       0.00      0.00      0.00       128\n",
+      "          PT       0.00      0.00      0.00        36\n",
+      "          US       0.71      0.99      0.83      9624\n",
+      "       other       0.17      0.01      0.01      1540\n",
+      "\n",
+      "    accuracy                           0.70     13635\n",
+      "   macro avg       0.11      0.09      0.08     13635\n",
+      "weighted avg       0.53      0.70      0.58     13635\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report\n",
+    "print( classification_report( y_test_nn, yhat_nn ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-11T15:13:19.932173Z",
+     "start_time": "2020-12-11T15:13:18.454397Z"
     }
    },
    "outputs": [
@@ -1292,7 +1346,6 @@
    ],
    "source": [
     "# Confusion Matrix\n",
-    "\n",
     "plot_confusion_matrix( y_test_nn, yhat_nn, normalize=False );"
    ]
   },
