cross-validation implementation done

--- a/airbnb_predict_first_booking.ipynb
+++ b/airbnb_predict_first_booking.ipynb
@@ -2326,11 +2326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-17T17:21:43.570178Z",
-     "start_time": "2020-12-17T17:21:43.365912Z"
+     "end_time": "2020-12-17T17:24:02.622545Z",
+     "start_time": "2020-12-17T17:24:02.587186Z"
     }
    },
    "outputs": [
@@ -2339,15 +2339,15 @@
      "output_type": "stream",
      "text": [
       "Number of rows: 98088\n",
-      "Number of rows: 138\n",
-      "Number of rows: 12\n"
+      "Number of columns: 138\n",
+      "Number of classes: 12\n"
      ]
     }
    ],
    "source": [
     "print(f'Number of rows: {x_train.shape[0]}')\n",
-    "print(f'Number of rows: {x_train.shape[1]}')\n",
-    "print(f'Number of rows: {y_train.nunique()}')"
+    "print(f'Number of columns: {x_train.shape[1]}')\n",
+    "print(f'Number of classes: {y_train.nunique()}')"
    ]
   },
   {
